--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Epworth League (U.S.) -- Fiction'
 - !lcc 'PS'
+- GITenberg
 title: 'In League with Israel: A Tale of the Chattanooga Conference'
 url: http://www.gutenberg.org/ebooks/40527
